src/objects/Zuora__PaymentPart__c.object
<CustomObject>
    <description>The applied and unapplied portions of the payments.</description>
    <fields>
        <fullName>Zuora__Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Zuora__CreatedDate__c</fullName>
        <description>The date when the invoice was created in the Zuora system.</description>
        <label>Zuora Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Zuora__DebitMemo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Debit memos that you issued to your customers to increase the amount your customers owned you.</description>
        <inlineHelpText>Debit memos that you issued to your customers to increase the amount your customers owned you.</inlineHelpText>
        <label>Debit Memo</label>
        <referenceTo>Zuora__DebitMemo__c</referenceTo>
        <relationshipLabel>Payment Parts</relationshipLabel>
        <relationshipName>Payment_Parts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zuora__External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field holds the Zuora object ID, and is used as external ID for data synchronization between Salesforce and Zuora.</description>
        <externalId>true</externalId>
        <inlineHelpText>This field holds the Zuora object ID, and is used as external ID for data synchronization between Salesforce and Zuora.</inlineHelpText>
        <label>External Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Zuora__Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The invoice to which the payment is applied.</description>
        <inlineHelpText>The invoice to which the payment is applied.</inlineHelpText>
        <label>Invoice</label>
        <referenceTo>Zuora__ZInvoice__c</referenceTo>
        <relationshipLabel>Payment Parts</relationshipLabel>
        <relationshipName>Payment_Parts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zuora__Payment__c</fullName>
        <description>The money sent by a customer to pay for charges related to their subscriptions.</description>
        <inlineHelpText>The money sent by a customer to pay for charges related to their subscriptions.</inlineHelpText>
        <label>Payment</label>
        <referenceTo>Zuora__Payment__c</referenceTo>
        <relationshipLabel>Payment Parts</relationshipLabel>
        <relationshipName>Payment_Parts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Zuora__UpdatedDate__c</fullName>
        <description>The date when the invoice was updated in the Zuora system.</description>
        <label>Zuora Updated Date</label>
        <type>DateTime</type>
    </fields>
    <label>Payment Part</label>
    <nameField>
        <label>Payment Part Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Parts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>